--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_country_picker: 0.1.4
+  country_pickers: 1.1.0
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
   intl: ^0.15.7
+  intl_translation: ^0.17.0
 
 dev_dependencies:
   flutter_test:
