--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_cupertino_localizations: ^1.0.1
   intl: ^0.15.7
   intl_translation: ^0.17.0
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
