--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
-  intl: 0.16.0
+  intl: ^0.15.8
   intl_translation: ^0.17.0
   http: ^0.12.0+2
 
